post-check;id#: 977;v: 1.33;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -39,12 +39,11 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - SAT 07/15/2023
 <!-- edit -->
-
+* (done) edit: threejs-math-utils - proof read and expand
+* () build and publish
 
 ### () - FRI 07/14/2023
 * (done) edit: threejs-animation-mixer - write about new tri12 demo section
-* () edit: threejs-math-utils - proof read and expand
-* () build and publish
 
 ### () - THU 07/13/2023
 * (done) edit: threejs-vector3-distance-to - proof read
