--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -29,19 +29,26 @@ The only other topic that I would also like to expand on more for now is just Li
 ---------- --------->
 ## () - WEEK 4 - SUN 07/16/2023 - SAT 07/22/2023
 
+### () - MON 07/18/2023
+<!-- EDIT -->
+* () edit: threejs-torus - proof read
+
 ### () - MON 07/17/2023
 <!-- EDIT -->
+* () edit: threejs-buffer-geometry-attributes-position- write about vertex order
+* () edit: threejs-mesh-material-index - proof read
 * () edit: threejs-scene - proof read / expand
-* () edit: threejs-torus - proof read
 
 ### () - SUN 07/16/2023
 <!-- EDIT -->
-* () start the electionjs app that is the position attribute editor idea
-* () edit: threejs-mesh-material-index - proof read
-* () edit: threejs-normal-material - proof read
+* (done) edit: threejs-normal-material - proof read
+* () edit: threejs-buffer-geometry-attributes-normals - fix any factual errors about vertex order
+* () edit: threejs-buffer-geometry-compute-vertex-normals - fix any factual errors about vertex order
+* () build and publish
 <!-- tri12 -->
-
-
+* () I think I would like to start an object format of tri12-butterfly
+<!-- electionjs -->
+* () start the electionjs app that is the position attribute editor idea
 <!-------- ----------
 -- WEEK 3
 ---------- --------->
@@ -52,9 +59,6 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- edit -->
 * (done) edit: threejs-math-utils - proof read and expand
 * (done) edit: threejs-svg-loader - prrof read
-* () build and publish
-<!-- tri12 -->
-* () I think I would like to start an object format of tri12-butterfly
 
 ### () - FRI 07/14/2023
 * (done) edit: threejs-animation-mixer - write about new tri12 demo section
