post-check;id#: 980;v: 1.22;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -42,8 +42,8 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - SUN 07/16/2023
 <!-- EDIT -->
 * (done) edit: threejs-normal-material - proof read
-* () edit: threejs-buffer-geometry-attributes-normals - fix any factual errors about vertex order
-* () edit: threejs-buffer-geometry-compute-vertex-normals - fix any factual errors about vertex order
+* (done) edit: threejs-buffer-geometry-attributes-normals - fix any factual errors about vertex order
+* (done) edit: threejs-buffer-geometry-compute-vertex-normals - fix any factual errors about vertex order
 * () build and publish
 <!-- tri12 -->
 * () I think I would like to start an object format of tri12-butterfly
