post-check;id#: 181;v: 1.50;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -44,6 +44,7 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-normal-material - proof read
 * (done) edit: threejs-buffer-geometry-attributes-normals - fix any factual errors about vertex order
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - fix any factual errors about vertex order
+* () edit: threejs-materials - expand
 * () build and publish
 <!-- tri12 -->
 * () I think I would like to start an object format of tri12-butterfly
