--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -29,25 +29,27 @@ The only other topic that I would also like to expand on more for now is just Li
 ---------- --------->
 ## () - WEEK 4 - SUN 07/16/2023 - SAT 07/22/2023
 
-### () - MON 07/18/2023
+### () - TUE 07/19/2023
 <!-- EDIT -->
-* () edit: threejs-materials - expand
-* () edit: threejs-torus - proof read
-* () edit: threejs-buffer-geometry-attributes-position- write about vertex order
+* () edit: threejs-materials - start and expand textures section
 
-### () - MON 07/17/2023
+### () - TUE 07/18/2023
 <!-- EDIT -->
 * (done) edit: threejs-materials - expand
-* (done) edit: threejs-mesh-material-index - proof read
-* (done) edit: threejs-scene - proof read / expand
+* () edit: threejs-torus - proof read
+* () edit: threejs-buffer-geometry-attributes-position- write about vertex order
 * () build and publish
 <!-- tri12 -->
 * () I think I would like to start an object format of tri12-butterfly
 <!-- electionjs -->
 * () start the electionjs app that is the position attribute editor idea
 
+### () - MON 07/17/2023
+* (done) edit: threejs-materials - expand
+* (done) edit: threejs-mesh-material-index - proof read
+* (done) edit: threejs-scene - proof read / expand
+
 ### () - SUN 07/16/2023
-<!-- EDIT -->
 * (done) edit: threejs-normal-material - proof read
 * (done) edit: threejs-buffer-geometry-attributes-normals - fix any factual errors about vertex order
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - fix any factual errors about vertex order
