post-check;id#: 876;v: 1.33;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -36,7 +36,7 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - TUE 07/18/2023
 <!-- EDIT -->
 * (done) edit: threejs-materials - expand
-* () edit: threejs-torus - proof read
+* (done) edit: threejs-torus - proof read
 * () edit: threejs-buffer-geometry-attributes-position- write about vertex order
 * () build and publish
 <!-- tri12 -->
