post-check;id#: 181;v: 1.61;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -31,18 +31,18 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - TUE 07/19/2023
 <!-- EDIT -->
-* () edit: threejs-materials - start and expand textures section
-
-### () - TUE 07/18/2023
-<!-- EDIT -->
-* (done) edit: threejs-materials - expand
-* (done) edit: threejs-torus - proof read
+* (done) edit: threejs-materials - start and expand textures section
 * () edit: threejs-buffer-geometry-attributes-position- write about vertex order
 * () build and publish
 <!-- tri12 -->
 * () I think I would like to start an object format of tri12-butterfly
 <!-- electionjs -->
 * () start the electionjs app that is the position attribute editor idea
+
+### () - TUE 07/18/2023
+<!-- EDIT -->
+* (done) edit: threejs-materials - expand
+* (done) edit: threejs-torus - proof read
 
 ### () - MON 07/17/2023
 * (done) edit: threejs-materials - expand
