post-check;id#: 883;v: 1.67;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -32,7 +32,7 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - TUE 07/19/2023
 <!-- EDIT -->
 * (done) edit: threejs-materials - start and expand textures section
-* () edit: threejs-buffer-geometry-attributes-position- write about vertex order
+* (done) edit: threejs-buffer-geometry-attributes-position - new custom tri demo on vertex order
 * () build and publish
 <!-- tri12 -->
 * () I think I would like to start an object format of tri12-butterfly
