post-check;id#: 1061;v: 1.0;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -29,11 +29,21 @@ The only other topic that I would also like to expand on more for now is just Li
 ---------- --------->
 ## () - WEEK 4 - SUN 07/16/2023 - SAT 07/22/2023
 
-### () - TUE 07/19/2023
+
+### () - SAT 07/22/2023
+
+### () - FRI 07/21/2023
+
+### () - THU 07/20/2023
 <!-- EDIT -->
+* () edit: threejs-materials - expand textures section with simple demos
+* () build and publish
+
+### () - WED 07/19/2023
 * (done) edit: threejs-materials - start and expand textures section
 * (done) edit: threejs-buffer-geometry-attributes-position - new custom tri demo on vertex order
-* () build and publish
+* (done) forpost: start a threejs-object-loader folder
+* (done) new: start post # 1061 on threejs-object-loader
 <!-- tri12 -->
 * () I think I would like to start an object format of tri12-butterfly
 <!-- electionjs -->
