post-check;id#: 1061;v: 1.1;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -36,6 +36,7 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - THU 07/20/2023
 <!-- EDIT -->
+* () edit: threejs-object-loader - expand basic section, getting started, and conclusion
 * () edit: threejs-materials - expand textures section with simple demos
 * () build and publish
 
