post-check;id#: 1061;v: 1.3;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -33,22 +33,22 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - SAT 07/22/2023
 
 ### () - FRI 07/21/2023
+* () build and publish
 
 ### () - THU 07/20/2023
 <!-- EDIT -->
-* () edit: threejs-object-loader - expand basic section, getting started, and conclusion
+* (done) edit: threejs-object-loader - expand basic section, getting started
+* (done) edit: threejs-object-loader - write conclusion
 * () edit: threejs-materials - expand textures section with simple demos
-* () build and publish
+<!-- electionjs -->
+* () start the electionjs app that is the position attribute editor idea
 
 ### () - WED 07/19/2023
 * (done) edit: threejs-materials - start and expand textures section
 * (done) edit: threejs-buffer-geometry-attributes-position - new custom tri demo on vertex order
 * (done) forpost: start a threejs-object-loader folder
 * (done) new: start post # 1061 on threejs-object-loader
-<!-- tri12 -->
-* () I think I would like to start an object format of tri12-butterfly
-<!-- electionjs -->
-* () start the electionjs app that is the position attribute editor idea
+* (done) I think I would like to start an object format of tri12-butterfly
 
 ### () - TUE 07/18/2023
 <!-- EDIT -->
