--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -39,7 +39,23 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- EDIT -->
 * (done) edit: threejs-object-loader - expand basic section, getting started
 * (done) edit: threejs-object-loader - write conclusion
+
+* () forpost: threejs-materials - new basic textures demo
 * () edit: threejs-materials - expand textures section with simple demos
+
+* () forpost: threejs-object-loader - expand basic section with at least one new demo
+* () forpost: threejs-object-loader - start tri12 section with one example
+* () edit: threejs-object-loader - write about new basic example
+* () edit: threejs-object-loader - write tri12 section
+
+<!-- videoground -->
+* () start video1 for threejs-object-loader
+* () I would like to make it a short video of the tri12 butterfly
+
+<!-- videoground r9 -->
+* () I would like to start work on features to read data to be used on a frame by frame basis
+* () features for rendering data on a frame my frame basis when exporting
+
 <!-- electionjs -->
 * () start the electionjs app that is the position attribute editor idea
 
