--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -39,9 +39,8 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- EDIT -->
 * (done) edit: threejs-object-loader - expand basic section, getting started
 * (done) edit: threejs-object-loader - write conclusion
-
-* () forpost: threejs-materials - new basic textures demo
-* () edit: threejs-materials - expand textures section with simple demos
+* (done) forpost: threejs-materials - new basic textures demo
+* (done) edit: threejs-materials - expand textures section with simple demos
 
 * () forpost: threejs-object-loader - expand basic section with at least one new demo
 * () forpost: threejs-object-loader - start tri12 section with one example
