--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -41,9 +41,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-object-loader - write conclusion
 * (done) forpost: threejs-materials - new basic textures demo
 * (done) edit: threejs-materials - expand textures section with simple demos
-
 * (done) forpost: threejs-object-loader - expand basic section with at least one new demo
-* () edit: threejs-object-loader - write about new basic example
+* (done) edit: threejs-object-loader - write about new basic example
 
 * () forpost: threejs-object-loader - start tri12 section with one example
 * () edit: threejs-object-loader - write tri12 section
