post-check;id#: 1061;v: 1.8;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -43,9 +43,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-materials - expand textures section with simple demos
 * (done) forpost: threejs-object-loader - expand basic section with at least one new demo
 * (done) edit: threejs-object-loader - write about new basic example
-
-* () forpost: threejs-object-loader - start tri12 section with one example
-* () edit: threejs-object-loader - write tri12 section
+* (done) forpost: threejs-object-loader - start tri12 section with one example
+* (done) edit: threejs-object-loader - write tri12 section
 
 <!-- videoground -->
 * () start video1 for threejs-object-loader
