post-check;id#: 177;v: 1.111;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -33,6 +33,8 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - SAT 07/22/2023
 
 ### () - FRI 07/21/2023
+<!-- EDIT -->
+* (done) edit: threejs-canvas-texture - Just a quick proof read for now
 * () build and publish
 
 ### () - THU 07/20/2023
