post-check;id#: 181;v: 1.64;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -35,7 +35,20 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - FRI 07/21/2023
 <!-- EDIT -->
 * (done) edit: threejs-canvas-texture - Just a quick proof read for now
+* (done) edit: threejs-materials - start light section
+
+<!-- videoground -->
+* () start video1 for threejs-object-loader
+* () I would like to make it a short video of the tri12 butterfly
+* () edit: threejs-object-loader - embed video1 for the post
 * () build and publish
+
+<!-- videoground r9 -->
+* () I would like to start work on features to read data to be used on a frame by frame basis
+* () features for rendering data on a frame my frame basis when exporting
+
+<!-- electionjs -->
+* () start the electionjs app that is the position attribute editor idea
 
 ### () - THU 07/20/2023
 <!-- EDIT -->
@@ -47,17 +60,6 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-object-loader - write about new basic example
 * (done) forpost: threejs-object-loader - start tri12 section with one example
 * (done) edit: threejs-object-loader - write tri12 section
-
-<!-- videoground -->
-* () start video1 for threejs-object-loader
-* () I would like to make it a short video of the tri12 butterfly
-
-<!-- videoground r9 -->
-* () I would like to start work on features to read data to be used on a frame by frame basis
-* () features for rendering data on a frame my frame basis when exporting
-
-<!-- electionjs -->
-* () start the electionjs app that is the position attribute editor idea
 
 ### () - WED 07/19/2023
 * (done) edit: threejs-materials - start and expand textures section
