--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -33,13 +33,11 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - SAT 07/22/2023
 
 ### () - FRI 07/21/2023
-<!-- EDIT -->
 * (done) edit: threejs-canvas-texture - Just a quick proof read for now
 * (done) edit: threejs-materials - start light section
-
-<!-- videoground -->
-* () start video1 for threejs-object-loader
-* () I would like to make it a short video of the tri12 butterfly
+* (done) start video1 for threejs-object-loader
+* (done) I would like to make it a short video of the tri12 butterfly
+<!-- EDIT -->
 * () edit: threejs-object-loader - embed video1 for the post
 * () build and publish
 
