post-check;id#: 1061;v: 1.9;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -37,8 +37,7 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-materials - start light section
 * (done) start video1 for threejs-object-loader
 * (done) I would like to make it a short video of the tri12 butterfly
-<!-- EDIT -->
-* () edit: threejs-object-loader - embed video1 for the post
+* (done) edit: threejs-object-loader - embed video1 for the post
 * () build and publish
 
 <!-- videoground r9 -->
