post-check;id#: 179;v: 1.43;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -24,6 +24,19 @@ The only other topic that I would also like to expand on more for now is just Li
 * () new : linux-apt - start a post on the main apt command
 * () new : linux-visudo - see about working out a post on using visudo and adding a new user
 * () new : linux-lsof - start new post on listing open files
+
+<!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 5 - SUN 07/23/2023 - SAT 07/29/2023
+
+
+<!-- electionjs -->
+* () start the electionjs app that is the position attribute editor idea
+<!-- videoground r9 -->
+* () videoground-r9 : start videoAPI.read
+* () videoground-r9 : VIDEO.update promise
+
 <!-------- ----------
 -- WEEK 4
 ---------- --------->
@@ -31,6 +44,11 @@ The only other topic that I would also like to expand on more for now is just Li
 
 
 ### () - SAT 07/22/2023
+<!-- videoground r9 -->
+* (done) videoground-r9 : work on range read lib
+* () edit: threejs-cube-texture - quick proof read
+* () edit: threejs-euler - quick proof read
+
 
 ### () - FRI 07/21/2023
 * (done) edit: threejs-canvas-texture - Just a quick proof read for now
@@ -38,14 +56,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) start video1 for threejs-object-loader
 * (done) I would like to make it a short video of the tri12 butterfly
 * (done) edit: threejs-object-loader - embed video1 for the post
-* () build and publish
-
-<!-- videoground r9 -->
-* () I would like to start work on features to read data to be used on a frame by frame basis
-* () features for rendering data on a frame my frame basis when exporting
-
-<!-- electionjs -->
-* () start the electionjs app that is the position attribute editor idea
+* (done) build and publish
+* (done) videoground-r9 : start work on the project again
 
 ### () - THU 07/20/2023
 <!-- EDIT -->
