post-check;id#: 866;v: 1.60;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -31,6 +31,23 @@ The only other topic that I would also like to expand on more for now is just Li
 ## () - WEEK 5 - SUN 07/23/2023 - SAT 07/29/2023
 
 
+### () - SAT 07/29/2023
+
+### () - FRI 07/28/2023
+
+### () - THU 07/27/2023
+
+### () - WED 07/26/2023
+
+### () - TUE 07/25/2023
+
+### () - MON 07/24/2023
+
+### () - SUN 07/23/2023
+<!-- EDIT -->
+* (done) edit: threejs-object3d-lookat - demo style update
+* () edit: threejs-object3d-lookat - proof read
+* () edit: threejs-vector3-apply-euler - proof read
 <!-- electionjs -->
 * () start the electionjs app that is the position attribute editor idea
 <!-- videoground r9 -->
@@ -44,11 +61,9 @@ The only other topic that I would also like to expand on more for now is just Li
 
 
 ### () - SAT 07/22/2023
-<!-- videoground r9 -->
 * (done) videoground-r9 : work on range read lib
-* () edit: threejs-cube-texture - quick proof read
-* () edit: threejs-euler - quick proof read
-
+* (done) edit: threejs-cube-texture - quick proof read
+* (done) edit: threejs-euler - quick proof read
 
 ### () - FRI 07/21/2023
 * (done) edit: threejs-canvas-texture - Just a quick proof read for now
