--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -44,15 +44,14 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - MON 07/24/2023
 
 ### () - SUN 07/23/2023
-<!-- EDIT -->
 * (done) edit: threejs-object3d-lookat - demo style update
-* () edit: threejs-object3d-lookat - proof read
-* () edit: threejs-vector3-apply-euler - proof read
-<!-- electionjs -->
-* () start the electionjs app that is the position attribute editor idea
+* (done) edit: threejs-object3d-lookat - proof read
+* (done) edit: threejs-vector3-apply-euler - proof read
 <!-- videoground r9 -->
 * () videoground-r9 : start videoAPI.read
 * () videoground-r9 : VIDEO.update promise
+<!-- electionjs -->
+* () start the electionjs app that is the position attribute editor idea
 
 <!-------- ----------
 -- WEEK 4
