--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -2,7 +2,7 @@
 
 'tri12 project', videoground, THREEJS, Linux
 
-I would like to expand more with the use of video ground to make videos. This means making more improvements to the program itself, and also starting new collections of content. With that said I will also want to keep up with threejs demos, posts, and so forth as always. However I would like to start a 'tri12' project that will be a collection of modules composed of no more that 12 triangles. These can be used in my video ground projects when it comes to blog post videos, but I think the best way forward with this would be to start a whole other collection of video content. I might want to bump up the number of triangles a bit more maybe, but I still think that less will be more with these.
+I would like to expand more with the use of video ground to make videos. This means making more improvements to the program itself, and also starting new collections of content. With that said I will also want to keep up with threejs demos, posts, and so forth as always. However I would like to start a 'tri12' project that will be a collection of models composed of no more that 12 triangles. These can be used in my video ground projects when it comes to blog post videos, but I think the best way forward with this would be to start a whole other collection of video content. I might want to bump up the number of triangles a bit more maybe, but I still think that less will be more with these.
 
 The only other topic that I would also like to expand on more for now is just Linux content as the only minor diversion from this.
 
@@ -40,18 +40,35 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - WED 07/26/2023
 
 ### () - TUE 07/25/2023
+<!-- EDIT: -->
+<!-- videoground r9 -->
+<!-- THREEJS-MATERIALS -->
+* () forpost: threejs-materials - start secton 13 on SHADER MATERIAL
+* () edit: threejs-materials - write about new section
+<!-- tri12 -->
 
 ### () - MON 07/24/2023
+<!-- EDIT: -->
+* () edit: threejs-object3d-rotation - proof read
+* () edit: threejs-edges-geometry - proof read
+<!-- videoground r9 -->
+* () videoground-r9 : start videoAPI.read
+* () videoground-r9 : VIDEO.update promise
+<!-- THREEJS-MATERIALS -->
+* () forpost: threejs-materials - start secton 12 on FOG
+* () edit: threejs-materials - write about new section
+<!-- tri12 -->
+* () json: new tri12 project of a figure
+<!-- electionjs -->
+* () start the electionjs app that is the position attribute editor idea
 
 ### () - SUN 07/23/2023
 * (done) edit: threejs-object3d-lookat - demo style update
 * (done) edit: threejs-object3d-lookat - proof read
 * (done) edit: threejs-vector3-apply-euler - proof read
-<!-- videoground r9 -->
-* () videoground-r9 : start videoAPI.read
-* () videoground-r9 : VIDEO.update promise
-<!-- electionjs -->
-* () start the electionjs app that is the position attribute editor idea
+
+* () forpost: threejs-materials - start secton 11 on material arrays
+* () edit: threejs-materials - write about new section
 
 <!-------- ----------
 -- WEEK 4
