post-check;id#: 878;v: 1.39;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -40,7 +40,10 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - WED 07/26/2023
 
 ### () - TUE 07/25/2023
+<!-- new post: -->
+* () new: start post # 1062 on linux-lsb-release
 <!-- EDIT: -->
+* () edit: linux-uname - write about lsb-release and link to post on this
 <!-- videoground r9 -->
 <!-- THREEJS-MATERIALS -->
 * () forpost: threejs-materials - start secton 13 on SHADER MATERIAL
