post-check;id#: 976;v: 1.37;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -51,9 +51,8 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- tri12 -->
 
 ### () - MON 07/24/2023
-<!-- EDIT: -->
-* () edit: threejs-object3d-rotation - proof read
-* () edit: threejs-edges-geometry - proof read
+* (done) edit: threejs-object3d-rotation - proof read
+* (done) edit: threejs-edges-geometry - proof read
 <!-- videoground r9 -->
 * () videoground-r9 : start videoAPI.read
 * () videoground-r9 : VIDEO.update promise
