post-check;id#: 181;v: 1.66;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -57,6 +57,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * () videoground-r9 : start videoAPI.read
 * () videoground-r9 : VIDEO.update promise
 <!-- THREEJS-MATERIALS -->
+* (done) forpost: threejs-materials - start secton 11 on material arrays
+* (done) edit: threejs-materials - write about new section
 * () forpost: threejs-materials - start secton 12 on FOG
 * () edit: threejs-materials - write about new section
 <!-- tri12 -->
@@ -68,9 +70,6 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-object3d-lookat - demo style update
 * (done) edit: threejs-object3d-lookat - proof read
 * (done) edit: threejs-vector3-apply-euler - proof read
-
-* () forpost: threejs-materials - start secton 11 on material arrays
-* () edit: threejs-materials - write about new section
 
 <!-------- ----------
 -- WEEK 4
