post-check;id#: 181;v: 1.68;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -53,14 +53,13 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - MON 07/24/2023
 * (done) edit: threejs-object3d-rotation - proof read
 * (done) edit: threejs-edges-geometry - proof read
+* (done) forpost: threejs-materials - start secton 11 on material arrays
+* (done) edit: threejs-materials - write about new section
+* (done) forpost: threejs-materials - start secton 12 on FOG
+* (done) edit: threejs-materials - write about new section
 <!-- videoground r9 -->
 * () videoground-r9 : start videoAPI.read
 * () videoground-r9 : VIDEO.update promise
-<!-- THREEJS-MATERIALS -->
-* (done) forpost: threejs-materials - start secton 11 on material arrays
-* (done) edit: threejs-materials - write about new section
-* () forpost: threejs-materials - start secton 12 on FOG
-* () edit: threejs-materials - write about new section
 <!-- tri12 -->
 * () json: new tri12 project of a figure
 <!-- electionjs -->
