--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -45,30 +45,29 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- EDIT: -->
 * () edit: linux-uname - write about lsb-release and link to post on this
 <!-- videoground r9 -->
+* () videoground-r9 : VIDEO.update promise methods
 <!-- THREEJS-MATERIALS -->
-* () forpost: threejs-materials - start secton 13 on SHADER MATERIAL
+* () forpost: threejs-materials - start section 13 on SHADER MATERIAL
 * () edit: threejs-materials - write about new section
-<!-- tri12 -->
-
-### () - MON 07/24/2023
-* (done) edit: threejs-object3d-rotation - proof read
-* (done) edit: threejs-edges-geometry - proof read
-* (done) forpost: threejs-materials - start secton 11 on material arrays
-* (done) edit: threejs-materials - write about new section
-* (done) forpost: threejs-materials - start secton 12 on FOG
-* (done) edit: threejs-materials - write about new section
-<!-- videoground r9 -->
-* () videoground-r9 : start videoAPI.read
-* () videoground-r9 : VIDEO.update promise
 <!-- tri12 -->
 * () json: new tri12 project of a figure
 <!-- electionjs -->
 * () start the electionjs app that is the position attribute editor idea
 
+### () - MON 07/24/2023
+* (done) edit: threejs-object3d-rotation - proof read
+* (done) edit: threejs-edges-geometry - proof read
+* (done) forpost: threejs-materials - start section 11 on material arrays
+* (done) edit: threejs-materials - write about new section
+* (done) forpost: threejs-materials - start section 12 on FOG
+* (done) edit: threejs-materials - write about new section
+* (done) videoground-r9 : VIDEO.update promise methods
+
 ### () - SUN 07/23/2023
 * (done) edit: threejs-object3d-lookat - demo style update
 * (done) edit: threejs-object3d-lookat - proof read
 * (done) edit: threejs-vector3-apply-euler - proof read
+* (done) videoground-r9 : start videoAPI.read
 
 <!-------- ----------
 -- WEEK 4
