post-check;id#: 978;v: 1.37;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -36,16 +36,24 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - FRI 07/28/2023
 
 ### () - THU 07/27/2023
+* () new: start post # 1063 on threejs-materials-loader
 
 ### () - WED 07/26/2023
 
+<!-- videoground r9 -->
+* () videoground-r9 : work on updating the write frame method for writing data in general
+
 ### () - TUE 07/25/2023
-<!-- new post: -->
+<!-- new posts: -->
 * () new: start post # 1062 on linux-lsb-release
+* () forpost: start a folder for a threejs-materials-loader post
 <!-- EDIT: -->
 * () edit: linux-uname - write about lsb-release and link to post on this
+* (done) edit: threejs-vector3-lerp - proof read
+* (done) edit: threejs-data-texture - proof read
 <!-- videoground r9 -->
-* () videoground-r9 : VIDEO.update promise methods
+* () videoground-r9 : work more on current start video
+* () videoground-r9 : update readme file
 <!-- THREEJS-MATERIALS -->
 * () forpost: threejs-materials - start section 13 on SHADER MATERIAL
 * () edit: threejs-materials - write about new section
