post-check;id#: 1062;v: 1.0;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -14,10 +14,12 @@ The only other topic that I would also like to expand on more for now is just Li
 * () videoground-aplay : start a new videoground content collection where the goal is to find ways to generate audo sample data
 * () videoground-meditation : start a whole collection of content that will be meditation style videos
 <!-------- ----------
--- EDIT 5k+ - Forcus more so on a top ten of sorts to get to 5000+ words and 10+ demos and beyond
+-- EDIT 5k+ - Focus more so on a top ten of sorts to get to 5000+ words and 10+ demos and beyond
 ---------- --------->
 * () threejs-object3d-position - There is having a demo for raycaster
-* () threejs-buffer-geometry-position - 
+* () threejs-buffer-geometry-position - vertex order demos
+* () threejs-data-texture - sections on canvas textures, type, format, ect
+* () threejs-texture - 
 <!-------- ----------
 -- NEW POST IDEAS FOR LINUX
 ---------- --------->
@@ -39,13 +41,14 @@ The only other topic that I would also like to expand on more for now is just Li
 * () new: start post # 1063 on threejs-materials-loader
 
 ### () - WED 07/26/2023
-
+<!-- EDIT -->
+* () linux-lsb-release - expand more on this subject
 <!-- videoground r9 -->
 * () videoground-r9 : work on updating the write frame method for writing data in general
 
 ### () - TUE 07/25/2023
 <!-- new posts: -->
-* () new: start post # 1062 on linux-lsb-release
+* (done) new: start post # 1062 on linux-lsb-release
 * () forpost: start a folder for a threejs-materials-loader post
 <!-- EDIT: -->
 * () edit: linux-uname - write about lsb-release and link to post on this
