--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -51,15 +51,15 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) new: start post # 1062 on linux-lsb-release
 * () forpost: start a folder for a threejs-materials-loader post
 <!-- EDIT: -->
-* () edit: linux-uname - write about lsb-release and link to post on this
+* (done) edit: linux-uname - write about lsb-release and link to post on this
 * (done) edit: threejs-vector3-lerp - proof read
 * (done) edit: threejs-data-texture - proof read
-<!-- videoground r9 -->
-* () videoground-r9 : work more on current start video
-* () videoground-r9 : update readme file
 <!-- THREEJS-MATERIALS -->
 * () forpost: threejs-materials - start section 13 on SHADER MATERIAL
 * () edit: threejs-materials - write about new section
+<!-- videoground r9 -->
+* () videoground-r9 : work more on current start video
+* () videoground-r9 : update readme file
 <!-- tri12 -->
 * () json: new tri12 project of a figure
 <!-- electionjs -->
