post-check;id#: 181;v: 1.70;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -38,25 +38,28 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - FRI 07/28/2023
 
 ### () - THU 07/27/2023
+<!-- NEW -->
 * () new: start post # 1063 on threejs-materials-loader
 
 ### () - WED 07/26/2023
+<!-- NEW -->
+* () forpost: threejs-materials-loader - more basic demos at least, maybe one texture demo if up for it
 <!-- EDIT -->
 * () linux-lsb-release - expand more on this subject
+<!-- THREEJS-MATERIALS -->
+* () forpost: threejs-materials - expand shader section more
+* () edit: threejs-materials - write about new shader demo\(s\)
 <!-- videoground r9 -->
 * () videoground-r9 : work on updating the write frame method for writing data in general
 
 ### () - TUE 07/25/2023
-<!-- new posts: -->
 * (done) new: start post # 1062 on linux-lsb-release
-* () forpost: start a folder for a threejs-materials-loader post
-<!-- EDIT: -->
+* (done) forpost: start a folder for a threejs-materials-loader post
 * (done) edit: linux-uname - write about lsb-release and link to post on this
 * (done) edit: threejs-vector3-lerp - proof read
 * (done) edit: threejs-data-texture - proof read
-<!-- THREEJS-MATERIALS -->
-* () forpost: threejs-materials - start section 13 on SHADER MATERIAL
-* () edit: threejs-materials - write about new section
+* (done) forpost: threejs-materials - start section 13 on SHADER MATERIAL
+* (done) edit: threejs-materials - write about new section
 <!-- videoground r9 -->
 * () videoground-r9 : work more on current start video
 * () videoground-r9 : update readme file
