--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -50,7 +50,9 @@ The only other topic that I would also like to expand on more for now is just Li
 * () forpost: threejs-materials - expand shader section more
 * () edit: threejs-materials - write about new shader demo\(s\)
 <!-- videoground r9 -->
-* () videoground-r9 : work on updating the write frame method for writing data in general
+* () videoground-r9 : finish r9
+<!-- videoground r10 -->
+* () videoground-10 : start r10 of videoground
 
 ### () - TUE 07/25/2023
 * (done) new: start post # 1062 on linux-lsb-release
@@ -60,9 +62,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-data-texture - proof read
 * (done) forpost: threejs-materials - start section 13 on SHADER MATERIAL
 * (done) edit: threejs-materials - write about new section
-<!-- videoground r9 -->
-* () videoground-r9 : work more on current start video
-* () videoground-r9 : update readme file
+* (done) videoground-r9 : work more on current start video
+* (done) videoground-r9 : update readme file
 <!-- tri12 -->
 * () json: new tri12 project of a figure
 <!-- electionjs -->
