--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -37,6 +37,7 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - FRI 07/28/2023
 
+
 ### () - THU 07/27/2023
 <!-- NEW -->
 * () new: start post # 1063 on threejs-materials-loader
@@ -49,6 +50,8 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- THREEJS-MATERIALS -->
 * () forpost: threejs-materials - expand shader section more
 * () edit: threejs-materials - write about new shader demo\(s\)
+<!-- videoground-tri32 -->
+* () start a new videoground content collection repo where the goal is to make very low poly models
 <!-- videoground r9 -->
 * () videoground-r9 : finish r9
 <!-- videoground r10 -->
@@ -64,8 +67,6 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-materials - write about new section
 * (done) videoground-r9 : work more on current start video
 * (done) videoground-r9 : update readme file
-<!-- tri12 -->
-* () json: new tri12 project of a figure
 <!-- electionjs -->
 * () start the electionjs app that is the position attribute editor idea
 
