post-check;id#: 1008;v: 1.16;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -35,23 +35,25 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - SAT 07/29/2023
 
-### () - FRI 07/28/2023
 
+### () - FRI 07/28/2023
+<!-- videoground-tri32 -->
+* () start a new videoground content collection repo where the goal is to make very low poly models
 
 ### () - THU 07/27/2023
 <!-- NEW -->
 * () new: start post # 1063 on threejs-materials-loader
 
 ### () - WED 07/26/2023
+* (done) linux-lsb-release - expand more on this subject
+* (done) forpost: threejs-materials - expand shader section more
+* (done) edit: threejs-materials - write about new shader demo\(s\)
+* (done) edit: threejs-buffer-geometry-compute-bounding-box - proof read
+* (done) edit: threejs-getting-started
 <!-- NEW -->
 * () forpost: threejs-materials-loader - more basic demos at least, maybe one texture demo if up for it
-<!-- EDIT -->
-* () linux-lsb-release - expand more on this subject
-<!-- THREEJS-MATERIALS -->
-* () forpost: threejs-materials - expand shader section more
-* () edit: threejs-materials - write about new shader demo\(s\)
-<!-- videoground-tri32 -->
-* () start a new videoground content collection repo where the goal is to make very low poly models
+<!-- electionjs -->
+* () fproto: geometry-position : get a basic starting point with the cursor
 <!-- videoground r9 -->
 * () videoground-r9 : finish r9
 <!-- videoground r10 -->
