--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -37,12 +37,23 @@ The only other topic that I would also like to expand on more for now is just Li
 
 
 ### () - FRI 07/28/2023
+<!-- EDIT -->
+* () edit: threejs-materials-loader - expand on the basic examples more.
 <!-- videoground-tri32 -->
 * () start a new videoground content collection repo where the goal is to make very low poly models
 
 ### () - THU 07/27/2023
 <!-- NEW -->
-* () new: start post # 1063 on threejs-materials-loader
+* (done) new: start post # 1063 on threejs-materials-loader
+<!-- 5k+ -->
+* () forpost: threejs-materials -
+* () edit: threejs-materials -
+<!-- electionjs -->
+* () fproto: geometry-position : get a basic starting point with the cursor
+<!-- videoground r9 -->
+* () videoground-r9 : finish r9
+<!-- videoground r10 -->
+* () videoground-10 : start r10 of videoground
 
 ### () - WED 07/26/2023
 * (done) linux-lsb-release - expand more on this subject
@@ -50,14 +61,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-materials - write about new shader demo\(s\)
 * (done) edit: threejs-buffer-geometry-compute-bounding-box - proof read
 * (done) edit: threejs-getting-started
-<!-- NEW -->
-* () forpost: threejs-materials-loader - more basic demos at least, maybe one texture demo if up for it
-<!-- electionjs -->
-* () fproto: geometry-position : get a basic starting point with the cursor
-<!-- videoground r9 -->
-* () videoground-r9 : finish r9
-<!-- videoground r10 -->
-* () videoground-10 : start r10 of videoground
+* (done) forpost: threejs-materials-loader - more basic demos at least, maybe one texture demo if up for it
+* (done) fproto: geometry-position : get a basic starting point with the cursor
 
 ### () - TUE 07/25/2023
 * (done) new: start post # 1062 on linux-lsb-release
