post-check;id#: 181;v: 1.72;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -39,15 +39,16 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - FRI 07/28/2023
 <!-- EDIT -->
 * () edit: threejs-materials-loader - expand on the basic examples more.
+<!-- 5k+ -->
+* () forpost: threejs-materials - expand common section with vertex color demo
+* () edit: threejs-materials - write about new demo
 <!-- videoground-tri32 -->
 * () start a new videoground content collection repo where the goal is to make very low poly models
 
 ### () - THU 07/27/2023
-<!-- NEW -->
 * (done) new: start post # 1063 on threejs-materials-loader
-<!-- 5k+ -->
-* () forpost: threejs-materials -
-* () edit: threejs-materials -
+* (done) forpost: threejs-materials - expand loader section
+* (done) edit: threejs-materials - write about new demo
 <!-- electionjs -->
 * () fproto: geometry-position : get a basic starting point with the cursor
 <!-- videoground r9 -->
