post-check;id#: 1034;v: 1.11;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -38,23 +38,26 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - FRI 07/28/2023
 <!-- EDIT -->
+* () edit: threejs-quaternion-premultiply - proof read
 * () edit: threejs-materials-loader - expand on the basic examples more.
 <!-- 5k+ -->
 * () forpost: threejs-materials - expand common section with vertex color demo
 * () edit: threejs-materials - write about new demo
+<!-- videoground-blog-posts -->
+* () 
+<!-- videoground -->
+* () videoground-r9 : finish r9
+* () videoground-10 : start r10 of videoground
 <!-- videoground-tri32 -->
 * () start a new videoground content collection repo where the goal is to make very low poly models
+<!-- electionjs -->
+* () proto: geometry-position : get a basic starting point with the cursor
 
 ### () - THU 07/27/2023
 * (done) new: start post # 1063 on threejs-materials-loader
 * (done) forpost: threejs-materials - expand loader section
 * (done) edit: threejs-materials - write about new demo
-<!-- electionjs -->
-* () fproto: geometry-position : get a basic starting point with the cursor
-<!-- videoground r9 -->
-* () videoground-r9 : finish r9
-<!-- videoground r10 -->
-* () videoground-10 : start r10 of videoground
+* (done) proto: geometry-position : style, json edit working
 
 ### () - WED 07/26/2023
 * (done) linux-lsb-release - expand more on this subject
@@ -63,7 +66,7 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-buffer-geometry-compute-bounding-box - proof read
 * (done) edit: threejs-getting-started
 * (done) forpost: threejs-materials-loader - more basic demos at least, maybe one texture demo if up for it
-* (done) fproto: geometry-position : get a basic starting point with the cursor
+* (done) proto: geometry-position : get a basic starting point with the cursor
 
 ### () - TUE 07/25/2023
 * (done) new: start post # 1062 on linux-lsb-release
