post-check;id#: 1063;v: 1.2;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -37,9 +37,8 @@ The only other topic that I would also like to expand on more for now is just Li
 
 
 ### () - FRI 07/28/2023
-<!-- EDIT -->
-* () edit: threejs-quaternion-premultiply - proof read
-* () edit: threejs-materials-loader - expand on the basic examples more.
+* (done) edit: threejs-quaternion-premultiply - proof read
+* (done) edit: threejs-materials-loader - expand on the basic examples more.
 <!-- 5k+ -->
 * () forpost: threejs-materials - expand common section with vertex color demo
 * () edit: threejs-materials - write about new demo
