--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -39,9 +39,8 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - FRI 07/28/2023
 * (done) edit: threejs-quaternion-premultiply - proof read
 * (done) edit: threejs-materials-loader - expand on the basic examples more.
-<!-- 5k+ -->
-* () forpost: threejs-materials - expand common section with vertex color demo
-* () edit: threejs-materials - write about new demo
+* (done) forpost: threejs-materials - expand common section with vertex color demo
+* (done) edit: threejs-materials - write about new demo
 <!-- videoground-blog-posts -->
 * () 
 <!-- videoground -->
