post-check;id#: 181;v: 1.82;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -1,4 +1,4 @@
-# todo list for HULY 2023
+# todo list for JULY 2023
 
 'tri12 project', videoground, THREEJS, Linux
 
@@ -27,6 +27,29 @@ The only other topic that I would also like to expand on more for now is just Li
 * () new : linux-visudo - see about working out a post on using visudo and adding a new user
 * () new : linux-lsof - start new post on listing open files
 
+
+<!-------- ----------
+-- WEEK 6
+---------- --------->
+## () - WEEK 6 - SUN 07/30/2023 - MON 07/31/2023
+
+### () - SAT 07/30/2023
+<!-- edit 5k -->
+* (done) forpost: threejs-materials - new demo on light
+* (done) edit: threejs-matreials - write about new demo
+
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts - 
+<!-- videoground -->
+* () videoground-r9 : finish r9
+* () videoground-10 : start r10 of videoground
+<!-- videoground-tri32 -->
+* () start a new videoground content collection repo where the goal is to make very low poly models
+<!-- electionjs -->
+* () proto: geometry-position : get a basic starting point with the cursor
+
+### () - SUN 07/29/2023
+
 <!-------- ----------
 -- WEEK 5
 ---------- --------->
@@ -41,15 +64,6 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-materials-loader - expand on the basic examples more.
 * (done) forpost: threejs-materials - expand common section with vertex color demo
 * (done) edit: threejs-materials - write about new demo
-<!-- videoground-blog-posts -->
-* () 
-<!-- videoground -->
-* () videoground-r9 : finish r9
-* () videoground-10 : start r10 of videoground
-<!-- videoground-tri32 -->
-* () start a new videoground content collection repo where the goal is to make very low poly models
-<!-- electionjs -->
-* () proto: geometry-position : get a basic starting point with the cursor
 
 ### () - THU 07/27/2023
 * (done) new: start post # 1063 on threejs-materials-loader
