--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -34,10 +34,10 @@ The only other topic that I would also like to expand on more for now is just Li
 ## () - WEEK 6 - SUN 07/30/2023 - MON 07/31/2023
 
 ### () - SAT 07/31/2023
-<!-- edit 5k -->
 * (done) forpost: threejs-materials - new demo on light
 * (done) edit: threejs-matreials - write about new demo
-
+* (done) edit: threejs-quaternion-setfromunitvectors - proof read
+* (done) edit: threejs-texture-loader - proof read
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts - 
 <!-- videoground -->
