post-check;id#: 1048;v: 1.9;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -38,9 +38,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-matreials - write about new demo
 * (done) edit: threejs-quaternion-setfromunitvectors - proof read
 * (done) edit: threejs-texture-loader - proof read
-<!-- videoground-blog-posts -->
 * (done) videoground-blog-posts - video1 for lathe geometry
-* () edit: threejs-lathe-geometry - embed video, proof read
+* (done) edit: threejs-lathe-geometry - embed video, proof read
 <!-- videoground -->
 * () videoground-r9 : finish r9
 * () videoground-10 : start r10 of videoground
